# jemalloc

./: .cirrus.yml  .gitignore  .travis.yml  CMakeLists.txt  Makefile.in  configure.ac
cmake/: CompilerFeatures.cmake  CompilerFlags.cmake  DetectInternalDefs.cmake  UnitTest.cmake  x86_64_vaddr_check.c
include/jemalloc/: defs.h.in  jemalloc.h.in  protos.h.in
include/jemalloc/internal/: arena_externs.h  arena_inlines_b.h  arena_stats.h  arena_structs.h  arena_structs_b.h  arena_types.h  base_externs.h  base_inlines.h  cache_bin.h  defs.h.in  edata.h  ehooks.h  emitter.h  extent_externs.h  extent_inlines.h  flat_bitmap.h  hpa.h  hpa_central.h  hpdata.h  jemalloc_internal_externs.h  jemalloc_internal_inlines_a.h  jemalloc_internal_inlines_c.h  jemalloc_internal_types.h  mutex_prof.h  pa.h  preamble.h.in  prng.h  prof_inlines_a.h  psset.h  rb.h  rtree.h  sc.h  sec.h  shard_pick.h  soc.h  tcache_externs.h  tcache_inlines.h  tcache_structs.h  tsd.h  witness.h
msvc/projects/vc2015/jemalloc/: jemalloc.vcxproj  jemalloc.vcxproj.filters
msvc/projects/vc2017/jemalloc/: jemalloc.vcxproj  jemalloc.vcxproj.filters
scripts/: gen_run_tests.py  gen_travis.py
src/: arena.c  background_thread.c  base.c  bin.c  bin_info.c  bitmap.c  buf_writer.c  cache_bin.c  ckh.c  counter.c  ctl.c  decay.c  div.c  ecache.c  edata.c  edata_cache.c  ehooks.c  emap.c  eset.c  extent.c  extent_dss.c  extent_mmap.c  hash.c  hook.c  hpa.c  hpa_central.c  hpdata.c  inspect.c  jemalloc.c  jemalloc_cpp.cpp  large.c  log.c  malloc_io.c  mutex.c  mutex_pool.c  nstime.c  pa.c  pa_extra.c  pages.c  peak_event.c  (+20 more)
test/include/test/: jemalloc_test.h.in  test_defs.h.in
test/unit/: arena_decay.c  arena_reset.c  cache_bin.c  emitter.c  hpa.c  hpa_central.c  hpdata.c  mallctl.c  psset.c  rb.c  shard_pick.c  stats.c
